# computer-graphics-project

./: CMakeLists.txt  colors.cpp  main.cpp  testing.cpp  testing2.cpp  todo.txt
colors/: colors.cpp  colors.h
ui_components/: cuboid_drawer.cpp  door_drawer.cpp  roof_drawer.cpp
ui_components/cuboid/: cuboid.cpp  cuboid.h
ui_components/house/: house.cpp  house.h
